2002-11-28  Alexandre Duret-Lutz  <adl@gnu.org>

	For PR automake/370:
	* automake.in (handle_languages): Don't prepend $U to $myext
	since handle_single_transform_list now appends it to $obj.
	Process the rule twice to handle deansified files in subdirectories.
	Mark _.c files in subdirectories for cleaning.
	(handle_single_transform_list): Append $U to $obj_sans_ext if
	needed: before this dependencies were output foo.Po instead
	of foo$U.Po.  Don't output explicit dependencies for renamed
	objects or sources in sub-directories: we already output
	a full compile rule for them.
	(lang_c_finish): Don't always use the full filename in the
	.c -> _.c rule.  This reverts part of my change of 2002-11-21.
	* tests/ansi6.test, tests/ansi7.test: Make sure deansified
	files are created in the right directory, and cleaned.
	Reported by Kevin Ryde.

2002-11-21  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/texinfo13.test: Require texi2dvi-o.
	* tests/defs.in: Handle required=texi2dvi-o.

	* automake.in (lang_c_finish): Use $@ in the .c -> _.c rule.

	* automake.in (handle_single_transform_list): Don't strip the
	directory from $full_ansi.  This reverts my patch of 2002-10-16.
	(lang_c_finish): Use the full filename, including the directory,
	in the .c -> _.c rule.  These two files must reside in the same
	directory.
	* tests/ansi6.test: Also try to compile without ansi2knr.
	Reported by Andreas Schwab

2002-11-14  Eric Blake  <ebb9@email.byu.edu>

	* lib/am/depend2.am: Add missing fi in c.obj rules.

2002-11-13  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Conditional Sources): Fix the `+=' example.
	Reported by Mike Castle.

2002-11-12  Jim Meyering  <jim@meyering.net>

	Make install-sh work even when names contain spaces or
	certain (but not all) shell metachars.

	* lib/install-sh: Remove lots of unnecessary quoting.
	Add double quotes where necessary.
	Write diagnostics to stderr, not stdout.
	Normalize spacing in diagnostics: use one space (not two,