@@ -1,3 +1,12 @@
+2002-11-29  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	For PR automake/371 and PR automake/372:
+	* automake.in (rule_define): Honor inference rules with multiple
+	targets, and warn when they are used.
+	* tests/suffix11.test: New file.
+	* tests/Makefile.am (TESTS): Add suffix11.test.
+	Reported by Duncan Gibson.
+
 2002-11-28  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	For PR automake/370:
